--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "clsx": "^2.0.0",
     "next": "13.5.4",
     "prisma": "^5.3.1",
