--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^9.0.0",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.4"
   },
