--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.0.0",
     "easymde": "^2.18.0",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "next-themes": "^0.2.1",
     "prisma": "^5.3.1",
     "react": "^18",
