--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.0",
+    "@tanstack/react-query": "^4.36.1",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "easymde": "^2.18.0",
